# ClientServer

./: .gitignore  AStar.h  AbstractAstarBest.cpp  AbstractAstarBest.h  BestFirstSearch.cpp  BestFirstSearch.h  BreadthFirstSearch.cpp  BreadthFirstSearch.h  CMakeLists.txt  Controller.cpp  Controller.h  DepthFirstSearch.h  EmpiricalExperiment.cpp  EmpiricalExperiment.h  Matrix.h  MatrixResult.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.h  MySerialServer.cpp  MyTestClientHandler.h  README.md  SearchSolver.h  Server.h  Solver.h  StringReverser.h  main.cpp
Algorithms/: AStar.cpp  AStar.h  AbstarctAstarBest.cpp  AbstractAstarBest.cpp  AbstractAstarBest.h  AbstractBfsDfs.cpp  AbstractBfsDfs.h  BestFirstSearch.h  BreadthFirstSearch.cpp  BreadthFirstSearch.h  DepthFirstSearch.cpp  DepthFirstSearch.h
CacheManagers/: CacheManager.h  FileCacheManager.cpp  FileCacheManager.h
ClientHandlers/: ClientHandler.h  MyClientHandler.cpp  MyClientHandler.h  MyTestClientHandler.cpp  MyTestClientHandler.h
DataStructures/: DataStructure.h  QueueStructure.cpp  QueueStructure.h  StackStructure.cpp  StackStructure.h
Matrix/: Matrix.cpp  Matrix.h  MatrixResult.cpp  MatrixResult.h
Servers/: MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  Server.h
Solvers/: SearchSolver.cpp  SearchSolver.h  Solver.h  StringReverser.cpp  StringReverser.h
searchAlgo/: BestFirstSearch.cpp  BestFirstSearch.h  Searchable.h  Searcher.h  State.cpp  State.h
